discussion/kv_engine/161787/161787_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-40314 Make MagmaKVStore local doc keys same as CouchKVStore

TODO commit msg

1) Make Magma use same local doc keys as Couchstore.
2) Move all constants to storage_common.
3) Use those constants everywhere.

Change-Id: Id859fae688cb649c345c251b973a892a753bf751

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2021-09-18 21:58:03.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-18 22:16:23.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12578/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:14:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string vbstateKey = "_local/vbstate";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:15:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string manifestKey = "_local/collections/manifest";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:16:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string openCollectionsKey = "_local/collections/open";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:17:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string openScopesKey = "_local/scopes/open";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:18:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string droppedCollectionsKey = "_local/collections/dropped";
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12578/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:14:14:
error: use of undeclared identifier "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12578/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14442/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14442/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34141/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40105/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11369/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14952/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2220/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14194/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13335/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22451/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2247/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-20 08:07:29.000000000
Message: 
Patch Set 3:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12578/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:14:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string vbstateKey = "_local/vbstate";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:15:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string manifestKey = "_local/collections/manifest";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:16:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string openCollectionsKey = "_local/collections/open";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:17:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string openScopesKey = "_local/scopes/open";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:18:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string droppedCollectionsKey = "_local/collections/dropped";
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12578/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:14:14:
error: use of undeclared identifier "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12578/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34141/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40105/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11369/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14952/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2220/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14194/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13335/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22451/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2247/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14445/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
